--- a/css/style.css
+++ b/css/style.css
@@ -70,9 +70,25 @@ img {
     .grid {
         display: flex;
         justify-content: space-between;
+        flex-wrap: wrap;
+    }
+    .centrar-columnas {
+        justify-content: center;
+    }
+    .columnas-4 {
+        flex: 0 0 calc(33.3% - 1rem);
     }
     .columnas-6 {
         flex: 0 0 calc(50% - 1rem);
+    }
+    .columnas-8 {
+        flex: 0 0 calc(66.6% - 1rem);
+    }
+    .columnas-10 {
+        flex: 0 0 calc(83.3% - 1rem);
+    }
+    .columnas-12 {
+        flex: 0 0 100%;
     }
 }
 
@@ -90,6 +106,11 @@ img {
     font-weight: 700;
     text-transform: uppercase;
     font-size: 2rem;
+    flex: 0 0 100%;
+}
+
+.btn:hover {
+    cursor: pointer;
 }
 
 .btn-primario {
@@ -99,6 +120,7 @@ img {
 @media(min-width: 768px) {
     .btn {
         display: inline-block;
+        flex: 0 0 auto;
     }
 }
 
@@ -243,6 +265,7 @@ img {
 }
 
 .curso {
+    padding-top: 3rem;
     padding-bottom: 3rem;
     border-bottom: 1px solid #e1e1e1;
 }
@@ -257,7 +280,8 @@ img {
     font-size: 2rem;
 }
 
-.curso p span {
+.curso p span,
+.curso p.descripcion {
     font-weight: 400;
 }
 
@@ -280,4 +304,44 @@ img {
 
 .site-footer p span {
     font-weight: 700;
+}
+
+
+/**Contacto**/
+
+.formulario-contacto {
+    background-color: #ffffff;
+    padding: 5rem;
+}
+
+@media(min-width: 768px) {
+    .formulario-contacto {
+        margin-top: -10rem;
+    }
+}
+
+.formulario-contacto .campo {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 2rem;
+}
+
+.formulario-contacto .campo label {
+    flex: 0 0 8rem;
+}
+
+.formulario-contacto .campo input:not([type="submit"]),
+.formulario-contacto textarea {
+    flex: 1;
+    border: 1px solid #e1e1e1;
+    padding: 1rem;
+}
+
+.formulario-contacto textarea {
+    height: 20rem;
+}
+
+.formulario-contacto .enviar {
+    display: flex;
+    justify-content: flex-end;
 }
